--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   - ISTIO_VERSION=1.7.3
   - REPO=fjudith/bookinfo-load-test
   - TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+  - INSTALL_METALLB=true
 
 before_script:
   # Kind
@@ -27,7 +28,7 @@ before_script:
   # - export KUBECONFIG="$(kind get kubeconfig-path)"
   # - cp "$(kind get kubeconfig-path --name="kind")" /tmp/admin.conf
   ## Istio
-  - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-={ISTIO_VERSION}-linux.tar.gz | tar xvzf -
+  - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux.tar.gz | tar xvzf -
   - chmod +x kind-linux-amd64
   - export PATH=$PATH:istio-${ISTIO_VERSION}/bin
   - istioctl install
