--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,12 @@ before_script:
   - mv kind-linux-amd64 kind
   - export PATH=$PATH:$PWD
   - kind create cluster --config=${TRAVIS_BUILD_DIR}/kind_config.yaml
-  
   - docker pull kubernetes/pause
   - kind load docker-image kubernetes/pause
   # - export KUBECONFIG="$(kind get kubeconfig-path)"
   # - cp "$(kind get kubeconfig-path --name="kind")" /tmp/admin.conf
   ## Istio
-  - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux.tar.gz | tar xvzf -
+  - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux-amd64.tar.gz | tar xvzf -
   - chmod +x kind-linux-amd64
   - export PATH=$PATH:istio-${ISTIO_VERSION}/bin
   - istioctl install
