--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
   ## Istio
   - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux-amd64.tar.gz | tar xvzf -
   - chmod +x kind-linux-amd64
-  - export PATH=$PATH:istio-${ISTIO_VERSION}/bin
+  - export PATH=$PATH:$PWD/istio-${ISTIO_VERSION}/bin
   - istioctl install
   ## Bookinfo
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml --wait
