--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ env:
 
 before_script:
   ## Kubectl
-  - curl -Lo /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v${K8S_VERSION}/bin/linux/amd64/kubectl
-  - chmod +x /usr/local/bin/kubectl
+  - sudo curl -Lo /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v${K8S_VERSION}/bin/linux/amd64/kubectl
+  - sudo chmod +x /usr/local/bin/kubectl
   ## Kind
-  - curl -Lo /usr/local/bin/kind https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VERSION}/kind-linux-amd64
-  - chmod +x /usr/local/bin/kind
+  - sudo curl -Lo /usr/local/bin/kind https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VERSION}/kind-linux-amd64
+  - sudo chmod +x /usr/local/bin/kind
   - kind create cluster --config=${TRAVIS_BUILD_DIR}/kind_config.yaml
   - docker pull kubernetes/pause
   - kind load docker-image kubernetes/pause
@@ -29,7 +29,7 @@ before_script:
   ## Istio
   - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux-amd64.tar.gz | tar xvzf -
   - chmod +x istio-${ISTIO_VERSION}/bin/istioctl
-  - ls -s /usr/local/bin/istioctl ${PWD}/istio-${ISTIO_VERSION}/bin/istioctl
+  - sudo ls -s /usr/local/bin/istioctl ${PWD}/istio-${ISTIO_VERSION}/bin/istioctl
   - istioctl install --set profile=demo --force
   ## Bookinfo
   - kubectl label namespace default isio-injection=true
