--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
   ## Istio
   - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux-amd64.tar.gz | tar xvzf -
   - chmod +x istio-${ISTIO_VERSION}/bin/istioctl
-  - sudo ls -s ${PWD}/istio-${ISTIO_VERSION}/bin/istioctl /usr/local/bin/istioctl
+  - sudo ln -s /usr/local/bin/istioctl ${PWD}/istio-${ISTIO_VERSION}/bin/istioctl
   - istioctl install --set profile=demo --force
   ## Bookinfo
   - kubectl label namespace default isio-injection=true
