--- a/.travis.yml
+++ b/.travis.yml
@@ -27,19 +27,22 @@ before_script:
   - kind load docker-image kubernetes/pause
   # - export KUBECONFIG="$(kind get kubeconfig-path)"
   # - cp "$(kind get kubeconfig-path --name="kind")" /tmp/admin.conf
+  ## Contour
+  - kubectl apply -f https://projectcontour.io/quickstart/contour.yaml
+  - kubectl patch daemonsets -n projectcontour envoy -p '{"spec":{"template":{"spec":{"nodeSelector":{"ingress-ready":"true"},"tolerations":[{"key":"node-role.kubernetes.io/master","operator":"Equal","effect":"NoSchedule"}]}}}}'
   ## Istio
   - curl -L https://github.com/istio/istio/releases/download/${ISTIO_VERSION}/istio-${ISTIO_VERSION}-linux-amd64.tar.gz | tar xvzf -
   - chmod +x istio-${ISTIO_VERSION}/bin/istioctl
   - sudo ln -s ${PWD}/istio-${ISTIO_VERSION}/bin/istioctl /usr/local/bin/istioctl
-  - istioctl install --set profile=demo --force
+  - istioctl install --set profile=default --force
   ## Bookinfo
   - kubectl label namespace default isio-injection=true
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml --wait
-  - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/productpage-nodeport.yaml --wait
+  - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/networking/bookinfo-gateway.yaml --wait
 
 script:
   ## Buid and run bookinfo-load-test
-  - BOOKINFO=$(kubectl get svc )
+  - kubectl get svc --all-namespaces
   - docker build -t ${REPO}:${COMMIT} .
   - docker run --rm -t ${REPO}:${COMMIT} -d 180 -h http://localhost:9080 -c 250 -r 60
 after_success:
