--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,24 @@ before_script:
   - kubectl label namespace default isio-injection=true
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml --wait
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/networking/bookinfo-gateway.yaml --wait
+  - cat << EOF | kubectl apply -f -
+    apiVersion: networking.k8s.io/v1beta1
+    kind: Ingress
+    metadata:
+      name: bookinfo
+    spec:
+      rules:
+      - http:
+          paths:
+          - path: /
+            backend:
+              serviceName: productpage
+              servicePort: 9080
+          - path: /productpage
+            backend:
+              serviceName: productpage
+              servicePort: 9080
+    EOF
 
 script:
   ## Build and run bookinfo-load-test
