--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
   - kubectl get po,svc,gateway,virtualservice --all-namespaces -o wide
   - ss -anlp
   - docker build -t ${REPO}:${COMMIT} .
-  - docker run --rm -t ${REPO}:${COMMIT} -d 5 -h http://127.0.0.1:${INGRESS_PORT} -u 250 -r 60
+  - docker run --rm -t ${REPO}:${COMMIT} -d 5 -h http://127.0.0.1 -u 250 -r 60
 after_success:
   - docker tag ${REPO}:${COMMIT} ${REPO}:${TAG}
   - if [ -z "$DOCKER_PASS" ] ; then
