--- a/.travis.yml
+++ b/.travis.yml
@@ -49,15 +49,15 @@ before_script:
     spec:
       rules:
       - http:
-          paths:
-          - path: /
-            backend:
-              serviceName: productpage
-              servicePort: 9080
-          - path: /productpage
-            backend:
-              serviceName: productpage
-              servicePort: 9080
+        paths:
+        - path: "/"
+          backend:
+            serviceName: productpage
+            servicePort: 9080
+        - path: "/productpage"
+          backend:
+            serviceName: productpage
+            servicePort: 9080
     EOF
 
 script:
