--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   ## Kind
   - sudo curl -Lo /usr/local/bin/kind https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VERSION}/kind-linux-amd64
   - sudo chmod +x /usr/local/bin/kind
-  - kind create cluster --config=${TRAVIS_BUILD_DIR}/kind_config.yaml
+  - kind create cluster --config=${TRAVIS_BUILD_DIR}/hack/kind_config.yaml
   - docker pull kubernetes/pause
   - kind load docker-image kubernetes/pause
   # - export KUBECONFIG="$(kind get kubeconfig-path)"
@@ -40,25 +40,7 @@ before_script:
   - kubectl label namespace default isio-injection=true
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml --wait
   - kubectl apply -f istio-${ISTIO_VERSION}/samples/bookinfo/networking/bookinfo-gateway.yaml --wait
-  - |
-    cat << EOF | kubectl apply -f -
-    apiVersion: networking.k8s.io/v1beta1
-    kind: Ingress
-    metadata:
-      name: bookinfo
-    spec:
-      rules:
-      - http:
-        paths:
-        - path: "/"
-          backend:
-            serviceName: productpage
-            servicePort: 9080
-        - path: "/productpage"
-          backend:
-            serviceName: productpage
-            servicePort: 9080
-    EOF
+  - kubectl apply -f ${TRAVIS_BUILD_DIR}/hack/bookinfo-ingress.yaml
 
 script:
   ## Build and run bookinfo-load-test
