--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ sudo: required
 services:
   - docker
 
-install: true
-
 env:
   global:
   - K8S_VERSION=1.19.1
@@ -18,7 +16,7 @@ env:
   - COMMIT=${TRAVIS_COMMIT::8}
 
 install:
-  - pip install locust
+  - pip3 install locust
 
 before_script:
   ## Kubectl
