--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ script:
   ## Binary test
   - kubectl get po,svc,ing --all-namespaces -o wide
   - LOCUSTFILE="${TRAVIS_BUILD_DIR}/src/locustfile.py"
+  - chmod a+x ${TRAVIS_BUILD_DIR}/src/runLocust.sh
   - ${TRAVIS_BUILD_DIR}/src/runLocust.sh -d 5 -h http://localhost -u 250 -r 60
   - popd 
   ## Build and run bookinfo-load-test
