--- a/.travis.yml
+++ b/.travis.yml
@@ -49,10 +49,9 @@ before_script:
 script:
   ## Binary test
   - kubectl get po,svc,ing --all-namespaces -o wide
-  - LOCUSTFILE="${TRAVIS_BUILD_DIR}/src/locustfile.py"
+  - LOCUST_FILE="${TRAVIS_BUILD_DIR}/src/locustfile.py"
   - chmod a+x ${TRAVIS_BUILD_DIR}/src/runLocust.sh
   - ${TRAVIS_BUILD_DIR}/src/runLocust.sh -d 5 -h http://localhost -u 250 -r 60
-  - popd 
   ## Build and run bookinfo-load-test
   - docker build -t ${REPO}:${COMMIT} .
   - docker run --rm -t ${REPO}:${COMMIT} -d 5 -h http://localhost -u 250 -r 60
